[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Dispenser.gd" type="Script" id=1]
[ext_resource path="res://resources/img/dispenser/disp0000.png" type="Texture" id=2]
[ext_resource path="res://resources/img/dispenser/disp0001.png" type="Texture" id=3]
[ext_resource path="res://resources/img/dispenser/disp0002.png" type="Texture" id=4]
[ext_resource path="res://resources/img/dispenser/disp0003.png" type="Texture" id=5]
[ext_resource path="res://resources/img/dispenser/disp0004.png" type="Texture" id=6]
[ext_resource path="res://resources/img/dispenser/disp0005.png" type="Texture" id=7]
[ext_resource path="res://resources/img/dispenser/disp0006.png" type="Texture" id=8]
[ext_resource path="res://resources/img/dispenser/disp0007.png" type="Texture" id=9]
[ext_resource path="res://resources/img/dispenser/disp0008.png" type="Texture" id=10]
[ext_resource path="res://resources/img/dispenser/disp0009.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 90.0
} ]
_sections_unfolded = [ "Resource" ]

[node name="Dispenser" type="StaticBody2D"]

position = Vector2( 166.536, 160.215 )
input_pickable = false
collision_layer = 0
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 1.3, 1.3 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Animation", "Axis Stretch", "Material", "Offset", "Patch Margin", "Pause", "Region", "Transform", "Visibility", "Z", "Z Index" ]

[node name="StartPosition" type="Position2D" parent="." index="1"]

_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="ColorTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Cooldown" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="Children" type="Node" parent="." index="5"]

[connection signal="empty" from="." to="." method="_on_Dispenser_empty"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="ColorTimer" to="." method="_on_ColorTimer_timeout"]


